<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:a2ee="http://schemas.android.com/apk/res-auto"  >

    <item
        android:id="@+id/action_search"
        a2ee:showAsAction="always"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_delete"
        a2ee:showAsAction="always"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete"/>
      

</menu>